Fix coordinate space for touch pointer events

Consider frame scale for calculating coordinates
of touch pointer events.

Bug: 809942, 811715, 809106, 807622
Change-Id: I5503583cd8c0e8b41b7e17fd59170a6f1dff7fa1
Reviewed-on: https://chromium-review.googlesource.com/914690
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Navid Zolghadr <nzolghadr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536813}
Former-commit-id: 735fa061d0f531bd0704c4c368d59edc1c1fea3a