third_party/WebKit/Source/core/input/PointerEventManagerTest.cpp
@@ -45,6 +45,42 @@ class CheckPointerEventListenerCallback final : public EventListener {
   int pen_event_received_count_ = 0;
 };
 
+class PointerEventCoordinateListenerCallback final : public EventListener {
+ public:
+  static PointerEventCoordinateListenerCallback* Create() {
+    return new PointerEventCoordinateListenerCallback();
+  }
+
+  bool operator==(const EventListener& other) const override {
+    return this == &other;
+  }
+
+  void handleEvent(ExecutionContext*, Event* event) override {
+    const PointerEvent* pointer_event = (PointerEvent*)event;
+    last_client_x_ = pointer_event->clientX();
+    last_client_y_ = pointer_event->clientY();
+    last_page_x_ = pointer_event->pageX();
+    last_page_y_ = pointer_event->pageY();
+    last_screen_x_ = pointer_event->screenX();
+    last_screen_y_ = pointer_event->screenY();
+    last_width_ = pointer_event->width();
+    last_height_ = pointer_event->height();
+  }
+
+  double last_client_x_ = 0;
+  double last_client_y_ = 0;
+  double last_page_x_ = 0;
+  double last_page_y_ = 0;
+  double last_screen_x_ = 0;
+  double last_screen_y_ = 0;
+  double last_width_ = 0;
+  double last_height_ = 0;
+
+ private:
+  PointerEventCoordinateListenerCallback()
+      : EventListener(EventListener::kCPPEventListenerType) {}
+};
+
 }  // namespace
 
 class PointerEventManagerTest : public SimTest {
@@ -54,14 +90,19 @@ class PointerEventManagerTest : public SimTest {
   }
   WebPointerEvent CreateTestPointerEvent(
       WebInputEvent::Type type,
-      WebPointerProperties::PointerType pointer_type) {
+      WebPointerProperties::PointerType pointer_type,
+      WebFloatPoint position_in_widget = WebFloatPoint(100, 100),
+      WebFloatPoint position_in_screen = WebFloatPoint(100, 100),
+      int movement_x = 0,
+      int movement_y = 0,
+      float width = 1,
+      float height = 1) {
     WebPointerEvent event(
         type,
-        WebPointerProperties(1, pointer_type,
-                             WebPointerProperties::Button::kLeft,
-                             WebFloatPoint(100, 100), WebFloatPoint(100, 100)),
-        1, 1);
-    event.SetFrameScale(1);
+        WebPointerProperties(
+            1, pointer_type, WebPointerProperties::Button::kLeft,
+            position_in_widget, position_in_screen, movement_x, movement_y),
+        width, height);
     return event;
   }
   WebMouseEvent CreateTestMouseEvent(WebInputEvent::Type type,
@@ -86,15 +127,15 @@ TEST_F(PointerEventManagerTest, PointerCancelsOfAllTypes) {
   GetDocument().body()->addEventListener(EventTypeNames::pointercancel,
                                          callback);
 
-  EventHandler().HandlePointerEvent(
+  WebView().HandleInputEvent(WebCoalescedInputEvent(
       CreateTestPointerEvent(WebInputEvent::kPointerDown,
                              WebPointerProperties::PointerType::kTouch),
-      Vector<WebPointerEvent>());
+      std::vector<WebPointerEvent>()));
 
-  EventHandler().HandlePointerEvent(
+  WebView().HandleInputEvent(WebCoalescedInputEvent(
       CreateTestPointerEvent(WebInputEvent::kPointerDown,
                              WebPointerProperties::PointerType::kPen),
-      Vector<WebPointerEvent>());
+      std::vector<WebPointerEvent>()));
 
   EventHandler().HandleMousePressEvent(
       CreateTestMouseEvent(WebInputEvent::kMouseDown, WebFloatPoint(100, 100)));
@@ -103,18 +144,18 @@ TEST_F(PointerEventManagerTest, PointerCancelsOfAllTypes) {
   ASSERT_EQ(callback->touchEventCount(), 0);
   ASSERT_EQ(callback->penEventCount(), 0);
 
-  EventHandler().HandlePointerEvent(
+  WebView().HandleInputEvent(WebCoalescedInputEvent(
       CreateTestPointerEvent(WebInputEvent::kPointerCausedUaAction,
                              WebPointerProperties::PointerType::kPen),
-      Vector<WebPointerEvent>());
+      std::vector<WebPointerEvent>()));
   ASSERT_EQ(callback->mouseEventCount(), 0);
   ASSERT_EQ(callback->touchEventCount(), 1);
   ASSERT_EQ(callback->penEventCount(), 1);
 
-  EventHandler().HandlePointerEvent(
+  WebView().HandleInputEvent(WebCoalescedInputEvent(
       CreateTestPointerEvent(WebInputEvent::kPointerCausedUaAction,
                              WebPointerProperties::PointerType::kTouch),
-      Vector<WebPointerEvent>());
+      std::vector<WebPointerEvent>()));
   ASSERT_EQ(callback->mouseEventCount(), 0);
   ASSERT_EQ(callback->touchEventCount(), 1);
   ASSERT_EQ(callback->penEventCount(), 1);
@@ -126,6 +167,35 @@ TEST_F(PointerEventManagerTest, PointerCancelsOfAllTypes) {
   ASSERT_EQ(callback->mouseEventCount(), 1);
   ASSERT_EQ(callback->touchEventCount(), 1);
   ASSERT_EQ(callback->penEventCount(), 1);
+}
+
+TEST_F(PointerEventManagerTest, PointerEventCoordinates) {
+  WebView().Resize(WebSize(400, 400));
+  SimRequest request("https://example.com/test.html", "text/html");
+  LoadURL("https://example.com/test.html");
+  request.Complete(
+      "<body style='padding: 0px; width: 400px; height: 400px;'>"
+      "</body>");
+  WebView().SetPageScaleFactor(2);
+  PointerEventCoordinateListenerCallback* callback =
+      PointerEventCoordinateListenerCallback::Create();
+  GetDocument().body()->addEventListener(EventTypeNames::pointerdown, callback);
+
+  WebView().HandleInputEvent(WebCoalescedInputEvent(
+      CreateTestPointerEvent(WebInputEvent::kPointerDown,
+                             WebPointerProperties::PointerType::kTouch,
+                             WebFloatPoint(150, 200), WebFloatPoint(100, 50),
+                             10, 10, 16, 24),
+      std::vector<WebPointerEvent>()));
+
+  ASSERT_EQ(callback->last_client_x_, 75);
+  ASSERT_EQ(callback->last_client_y_, 100);
+  ASSERT_EQ(callback->last_page_x_, 75);
+  ASSERT_EQ(callback->last_page_y_, 100);
+  ASSERT_EQ(callback->last_screen_x_, 100);
+  ASSERT_EQ(callback->last_screen_y_, 50);
+  ASSERT_EQ(callback->last_width_, 8);
+  ASSERT_EQ(callback->last_height_, 12);
 }
 
 }  // namespace blink
